compiler/testData/diagnostics/testsWithStdLib/annotations/jvmRecordWithoutJdk15.fir.kt
// !LANGUAGE: +JvmRecordSupport
// !API_VERSION: 1.5
// SKIP_TXT

<!NON_DATA_CLASS_JVM_RECORD!>@JvmRecord<!>
class MyRec(
    konst x: String,
    konst y: Int,
    vararg konst z: Double,
)
